p align issue fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ a {
     color: #BD6F6F;
 }
 
-p {
+.p-align {
     text-align: justify;
 }
 
